# Xbox-Code-Checker

./: .gitignore  LICENSE  README.md  build.py  config.example.json  go.mod  main.go  main.py  pyproject.toml  requirements.txt
.kiro/steering/: product.md  structure.md  tech.md
input/: .gitkeep  WLID.txt  пример_WLID.txt  пример_коды.txt
output/: .gitkeep
src/: __init__.py  app.py
src/core/: __init__.py  code_checker.py  progress_manager.py  retry_manager.py
src/data/: __init__.py  api_client.py  browser_headers.py  file_manager.py  models.py  user_agents.py
src/gui/: __init__.py  main_window.py  results_viewer.py  settings_dialog.py  wlid_manager_dialog.py
src/gui/components/: __init__.py  batched_gui_updater.py  export_format_dialog.py  file_input_handler.py  optimized_progress_updater.py  progress_display_manager.py  results_display_manager.py  virtualized_list.py
src/locales/: en.json  ru.json
src/utils/: localization.py
tests/: test_api_client.py  test_batched_gui_updater.py  test_code_checker.py  test_file_input_handler.py  test_file_manager.py  test_file_size_validation.py  test_http_connection_management.py  test_optimized_progress_updater.py  test_progress_display_manager.py  test_thread_safety.py  test_virtualized_list.py
